2008-02-13  Emmanuele Bassi  <ebassi@gnome.org>

	Merge from trunk:

	* gtk/gtkrecentchoosermenu.c:
	(idle_populate_func), (idle_populate_clean_up): Fix possible
	recursion by resetting the idle source id. (#507605, William
	Pitcock)

2008-02-12  Matthias Clasen  <mclasne@redhat.com>

	* configure.in: Bump version

	* === Released 2.12.8 ===

	* NEWS: Updates

2008-02-12  Matthias Clasen  <mclasne@redhat.com>

	* gtk/gtkpapersize.c:
	* gtk/gtkprintoperation.c:
	* gtk/gtkvolumebutton.c:
	* gtk/gtkbulderparser.c: Fix some i18n errors. Pointed
	out by Behdad Esfahbod.

2008-02-12  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkevents-win32.c
	* gdk/win32/gdkwindow-win32.c
	* gdk/win32/gdkwindow-win32.h
	* gdk/win32/gdkwin32.h:
	Modal window rework.  (#455627, #511111, #514643, #514789)

2008-02-12  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gtk/gtkfilechooser.c (gtk_file_chooser_get_current_folder_uri):
	Check the return value of _gtk_file_chooser_get_file_system () for
	NULL before passing it to gtk_file_system_path_to_uri ().
	(#515667, Francesco Montorsi)

2008-02-12  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtkfilechooserdefault.c (switch_to_shortcut): Don't focus
	the file list (this was the last place where we would focus the
	file list explicitly).  If you are in the location entry, for
	example, you don't want Alt-Home to take you to the file list; you
	just want the current folder to change.  Thanks to Olle Bergkvist
	<olle.bergkvist@yahoo.se> for pointing this out in
	http://bugzilla.gnome.org/show_bug.cgi?id=419737#c51.
	(focus_browse_tree_view_if_possible): Removed.

2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Skip exensions when selecting filenames in the save-as dialog.
	(#362516, Carlos Garnacho)

	* gtk/gtkfilechooserentry.h:
	* gtk/gtkfilechooserentry.c (_gtk_file_chooser_entry_select_filename):