@@ -1,3 +1,12 @@
+2008-02-13  Richard Hult  <richard@imendio.com>
+
+	Merged from trunk:
+
+	* gdk/quartz/gdkcolor-quartz.c: (gdk_colormap_alloc_colors): Fix
+	the return value (return number of colors that failed), and handle
+	RGBA colormap.
+	(gdk_colormap_free_colors): Fix typo in comment.
+
 2008-02-13  Emmanuele Bassi  <ebassi@gnome.org>
 
 	Merge from trunk:
